# api/task/controller.go
@@ -1,10 +1,12 @@
 package task
 
 import (
+	"app/api/task/dto"
 	"app/arch/network"
 	"fmt"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 )
 
 type taskController struct {
@@ -24,6 +26,7 @@ func CreateController(
 func (c *taskController) AddRouters(group *gin.RouterGroup) {
 	group.GET("/:id", c.getTaskById)
 	group.POST("/", c.createNewTask)
+	group.PATCH("/:id", c.updateTask)
 }
 
 // GetTaskById godoc
@@ -39,8 +42,8 @@ func (c *taskController) AddRouters(group *gin.RouterGroup) {
 // @Router /api/v1/task/{id} [get]
 func (c *taskController) getTaskById(ctx *gin.Context) {
 	fmt.Println("Controller getTaskById")
-	c.service.FindTaskById("1123")
-	c.Send(ctx).SuccessMsgRes("Get Success Full")
+	task := c.service.FindTaskById("1123")
+	c.Send(ctx).SuccessDataRes("Get Success Full", task)
 }
 
 // CreateTask godoc
@@ -55,5 +58,44 @@ func (c *taskController) getTaskById(ctx *gin.Context) {
 // @Router /api/v1/task [post]
 func (c *taskController) createNewTask(ctx *gin.Context) {
 	fmt.Println("Controller createNewTask")
-	c.Send(ctx).SuccessMsgRes("Create Success Full")
+	value, _ := c.service.CreateTask()
+	c.Send(ctx).SuccessDataRes("Create Success Full", value)
+}
+
+// updateTask godoc
+// @Summary Update a task
+// @Description Update task fields partially by ID
+// @Tags Tasks
+// @Accept json
+// @Produce json
+// @Param id path string true "Task ID (UUID)"
+// @Param input body dto.UpdateTask true "Updated task fields"
+// @Success 200 {object} model.Task
+// @Router /api/v1/task/{id} [patch]
+func (c *taskController) updateTask(ctx *gin.Context) {
+	fmt.Println("ctx.Param: ", ctx.Request.URL)
+	idStr := ctx.Param("id")
+
+	fmt.Println("Task ID:", idStr)
+
+	// (optional) convert to UUID if needed
+	taskID, err := uuid.Parse(idStr)
+	if err != nil {
+		c.Send(ctx).BadRequestErr("Invalid UUID format for task ID", err)
+		return
+	}
+	var input dto.UpdateTask
+	if err := ctx.ShouldBindJSON(&input); err != nil {
+		c.Send(ctx).BadRequestErr("Input value is invalid", err)
+		return
+	}
+
+	task, err := c.service.UpdateTask(taskID, input)
+
+	if err != nil {
+		c.Send(ctx).BadRequestErr("Internal server error", err)
+		return
+	}
+
+	c.Send(ctx).SuccessDataRes("update success", task)
 }
